--- a/IotaWebApp.web/appsettings.json
+++ b/IotaWebApp.web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=WebsiteCMSDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-A8B0QL1;Database=IotaWebAppDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
